--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "oro/platform": "3.1.*",
         "ext-mongodb": "*",
         "mongodb/mongodb": "^1.1",
-        "knplabs/knp-gaufrette-bundle": "0.3.*"
+        "knplabs/knp-gaufrette-bundle": "0.3.*",
+        "knplabs/gaufrette": "0.9.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
