--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "oro/platform": "4.2.*",
         "ext-mongodb": "*",
         "mongodb/mongodb": "^1.1",
-        "knplabs/knp-gaufrette-bundle": "0.5.2"
+        "knplabs/knp-gaufrette-bundle": "~0.7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.1.*"
+        "phpunit/phpunit": "~9.5.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
