--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "oro/platform": "4.2.*",
-        "ext-mongodb": "*",
+        "ext-mongodb": "1.9.*",
         "mongodb/mongodb": "^1.1",
         "knplabs/knp-gaufrette-bundle": "~0.7.1"
     },
