OPI-654 Update Components of the CI and OroCloud environment to the l… (#31546)
* OPI-654 Update Components of the CI and OroCloud environment to the latest minor versions
- update version
- fix ES start
- removed dependency on language codes order in the intl library in the unit test

* BAP-21111: Unlock mongodb extension version to support ^1.8.0

* Updated dev.locks

| Production Changes                   | From    | To      | Compare                                                                              |
|--------------------------------------|---------|---------|--------------------------------------------------------------------------------------|
| cboden/ratchet                       | v0.4.3  | v0.4.4  | [...](https://github.com/ratchetphp/Ratchet/compare/v0.4.3...v0.4.4)                 |
| composer/composer                    | 1.10.23 | 1.10.24 | [...](https://github.com/composer/composer/compare/1.10.23...1.10.24)                |
| laminas/laminas-diagnostics          | 1.10.0  | 1.11.0  | [...](https://github.com/laminas/laminas-diagnostics/compare/1.10.0...1.11.0)        |
| laminas/laminas-zendframework-bridge | 1.4.0   | 1.4.1   | [...](https://github.com/laminas/laminas-zendframework-bridge/compare/1.4.0...1.4.1) |
| liip/monitor-bundle                  | 2.16.1  | v2.17.1 | [...](https://github.com/liip/LiipMonitorBundle/compare/2.16.1...v2.17.1)            |
| phpdocumentor/type-resolver          | 1.5.1   | 1.6.0   | [...](https://github.com/phpDocumentor/TypeResolver/compare/1.5.1...1.6.0)           |
| ratchet/rfc6455                      | v0.3    | v0.3.1  | [...](https://github.com/ratchetphp/RFC6455/compare/v0.3...v0.3.1)                   |
| react/dns                            | v1.8.0  | v1.9.0  | [...](https://github.com/reactphp/dns/compare/v1.8.0...v1.9.0)                       |
| react/promise-timer                  | v1.7.0  | v1.8.0  | [...](https://github.com/reactphp/promise-timer/compare/v1.7.0...v1

--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "oro/platform": "4.1.*",
-        "ext-mongodb": "1.9.*",
-        "mongodb/mongodb": "^1.1",
+        "mongodb/mongodb": "1.8.*",
         "knplabs/knp-gaufrette-bundle": "0.5.2"
     },
     "minimum-stability": "dev",
