--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "knplabs/knp-gaufrette-bundle": "~0.7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.5.1"
+        "phpunit/phpunit": "9.5.13"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
