--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
         }
     ],
     "require": {
-        "oro/platform": "5.0.*",
+        "oro/platform": "5.1.*",
         "mongodb/mongodb": "^1.1",
         "knplabs/knp-gaufrette-bundle": "~0.7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "~9.5.1"
+        "phpunit/phpunit": "9.5.13"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "5.0-dev"
+            "dev-master": "5.1-dev"
         }
     }
 }
