--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "oro/platform": "5.0.*",
-        "mongodb/mongodb": "^1.1",
+        "mongodb/mongodb": "1.10.*",
         "knplabs/knp-gaufrette-bundle": "~0.7.1"
     },
     "require-dev": {
