BAP-17334: Update applications to use "symfony/dotenv" component for managing environment variables (#34720)
- added .env-app files support and removed most of the parameters from the config/parameters.yml in favor of environment variables with DSNs. For more details, see the [migration guide](https://doc.oroinc.com/master/backend/setup/dev-environment/env-vars/).
- added OroRedisConfigBundle to oro/platform package. The bundle came from the outer package oro/redis-config and it was rebuilt to utilize Symfony redis configuration components instead of once from 3rd party package snc/redis-bundle.

Co-authored-by: Serhii Miasnoi <smiasnoi@oroinc.com>
Co-authored-by: Dmytro Syrvachov <dsyrvachov@oroinc.com>
Co-authored-by: Victor Tihonchuk <victor@oroinc.com>

--- a/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
+++ b/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
@@ -4,6 +4,10 @@ services:
     class: Oro\Bundle\GridFSConfigBundle\Adapter\GridFS
     abstract: true
 
+  oro.mongodb.driver.config:
+    class: Oro\Bundle\GridFSConfigBundle\Provider\MongoDbDriverConfig
+    abstract: true
+
   oro.mongodb.driver.manager:
     class: MongoDB\Driver\Manager
     abstract: true
