BAP-22655: Do not require a writable public/media folder (#38747)
- public/media requirement check moved to PublicMediaDirectoryRequirementsProvider
- Added MongoDB requirements provider
- Added config to override PublicMediaDirectoryRequirementsProvider with MongoDb provider when GridFSConfigBundle is used

--- a/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
+++ b/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
@@ -15,3 +15,15 @@ services:
   oro.gridfs.bucket:
     class: Oro\Bundle\GridFSConfigBundle\GridFS\Bucket
     abstract: true
+
+  oro.mongodb.requirements_provider:
+    class: Oro\Bundle\GridFSConfigBundle\Provider\MongoDbRequirementsProvider
+    arguments:
+      - '%kernel.project_dir%'
+      - '@?oro.mongodb.driver.config.gaufrette.public_adapter'
+      - '@logger'
+    tags:
+      - { name: oro.requirements_provider }
+
+  # Override the requirements provider
+  oro_installer.public_media_directory_requirements_provider: '@oro.mongodb.requirements_provider'
