BB-24783: Update license files (#39644)
* BB-24783: Update license files
- updated copyright year, domains, license texts and references in applications and packages

* Updated dev.locks

| Production Changes                | From     | To       | Compare                                                                                         |
|-----------------------------------|----------|----------|-------------------------------------------------------------------------------------------------|
| authorizenet/authorizenet         | 2.0.3    | 2.0.4    | [...](https://github.com/AuthorizeNet/sdk-php/compare/2.0.3...2.0.4)                            |
| composer/ca-bundle                | 1.5.1    | 1.5.2    | [...](https://github.com/composer/ca-bundle/compare/1.5.1...1.5.2)                              |
| composer/semver                   | 3.4.2    | 3.4.3    | [...](https://github.com/composer/semver/compare/3.4.2...3.4.3)                                 |
| doctrine/annotations              | 1.14.3   | 1.14.4   | [...](https://github.com/doctrine/annotations/compare/1.14.3...1.14.4)                          |
| doctrine/common                   | 3.4.4    | 3.4.5    | [...](https://github.com/doctrine/common/compare/3.4.4...3.4.5)                                 |
| doctrine/sql-formatter            | 1.4.1    | 1.5.1    | [...](https://github.com/doctrine/sql-formatter/compare/1.4.1...1.5.1)                          |
| google/apiclient-services         | v0.369.0 | v0.379.0 | [...](https://github.com/googleapis/google-api-php-client-services/compare/v0.369.0...v0.379.0) |
| google/auth                       | v1.41.0  | v1.42.0  | [...](https://github.com/googleapis/google-auth-library-php/compare/v1.41.0...v1.42.0)          |
| jms/serializer                    | 3.30.0   | 3.31.0   | [...](https://github.com/schmittjoh/serializer/compare/3.30.0...3.31.0)                         |
| laminas/laminas-code              | 4.14.0   | 4.15.1   

--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
     "keywords": ["Oro", "OroPlatform", "Mongo", "MongoDB", "GridFS"],
     "homepage": "https://github.com/oroinc/gridfs-config",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Oro, Inc",
+            "homepage": "https://oroinc.com/"
+        }
+    ],
     "autoload": {
         "psr-4": {"Oro\\Bundle\\GridFSConfigBundle\\": "src/Oro/Bundle/GridFSConfigBundle"},
         "exclude-from-classmap": ["/Tests/"]
     },
-    "authors": [
-        {
-            "name": "Oro, Inc",
-            "homepage": "http://oroinc.com"
-        }
-    ],
     "require": {
         "oro/platform": "6.1.*",
         "mongodb/mongodb": "1.15.*",
