BB-25262 Build to 6.0 failing because of old classes with PSR-4 errors - updated composer.json files to proper Tests folder exclusion rule

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {"Oro\\Bundle\\GridFSConfigBundle\\": "src/Oro/Bundle/GridFSConfigBundle"},
-        "exclude-from-classmap": ["/Tests/"]
+        "exclude-from-classmap": ["**/Tests/"]
     },
     "authors": [
         {
