BAP-22730: Export of 1M+ records fails with memory limit error (#42863)

--- a/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
+++ b/src/Oro/Bundle/GridFSConfigBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
   oro_gridfs.adapter.gridfs:
     parent: knp_gaufrette.adapter.gridfs
-    class: Oro\Bundle\GridFSConfigBundle\Adapter\GridFS
+    class: Oro\Bundle\GridFSConfigBundle\Adapter\GridFsStreamFactory
     abstract: true
 
   oro.mongodb.driver.config:
