--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require": {
         "oro/platform": "6.1.*",
-        "mongodb/mongodb": "1.15.*",
+        "mongodb/mongodb": "^1.15 || ^2.0",
         "knplabs/knp-gaufrette-bundle": "~0.9.0"
     },
     "require-dev": {
